2014-11-26  Per Bothner  <per@bothner.com>

	* ChainLambdas.java (visitCaseExp): Fix logic error in handling of
	elseClause.

2014-11-20  Per Bothner  <per@bothner.com>

	* Language.java (languages): Add ".sld" extension for Scheme.

2014-11-17  Per Bothner  <per@bothner.com>

	* ModuleInfo.java (getModuleExpRaw): New method.

2014-11-16  Per Bothner  <per@bothner.com>

	* Compilation.java (error): Generalize parameter.

	* Compilation.java (subModuleMap): New field.

2014-11-13  Per Bothner  <per@bothner.com>

	* ProcInitializer.java (emitLoadModuleMethod): Be less agressive
	about update-in-place of old ModuleMethod, since this could lead
	to modifying standard procedures in kawa/lib.  Now only do so
	if the old module is interactive or has the same class name.
	* ModuleManager.java (interactiveClassPrefix): Make public.

2014-11-12  Per Bothner  <per@bothner.com>

	* SetExp.java (compile): Check that decl.field is non-null.
	This can happen in some error situations.

2014-11-06  Andrea Bernardini <andrebask@gmail.com>

	* CaseExp.java (print): Fix to avoid a ClassCastException.

2014-11-06  Per Bothner  <per@bothner.com>

	* Language.java (getExtensions): New method, with logic moved
	from AbstractScriptEngineFactory.method.
	(extensions): New field.
	* AbstractScriptEngineFactory.java (getExtensions): Just call
	Language.getExtensions.
	(extensions): Removed field.

2014-11-02  Per Bothner  <per@bothner.com>

	* Compilation.java (demangleName): Demangle initial '$N'.

2014-10-13  Per Bothner  <per@bothner.com>

	Add support for r7rs 'define-library'.
	* Compilation.java (process): Checked lexer is non-null before close.
	Don't write sub-module class if it is empty.
	* ModuleExp.java (HAS_SUB_MODULE): New flag.
	* ModuleManager.java (createWithClassName): New factory method.

	* Compilation.java (getGlobalEnvironment): New method.
	(resolve): Use it.

2014-10-13  Per Bothner  <per@bothner.com>

	* Compilation.java (isPedantic, setPedantic): New methods