@@ -1,3 +1,7 @@
+2014-11-28  Per Bothner  <per@bothner.com>
+
+	* LambdaExp.java (allocMethod): Add a sanity check.
+
 2014-11-26  Per Bothner  <per@bothner.com>
 
 	* ChainLambdas.java (visitCaseExp): Fix logic error in handling of
